2013-08-16 Freja Nordsiek
	* Initial version.
	* Added example: examples/Four_Sine_Waves/Four_Sine_Waves.ino